--- a/index.html
+++ b/index.html
@@ -11,17 +11,28 @@
 <body>
 
     <header>
-        <section class="header1 bg-celeste flex">
+        <section class="header1 bg-azzurro flex">
             <div class="container flex">
-                <div class="navbar bg-senape flex black-border">
-                    <div class="logo">logo</div>
-                    <div class="navbar-link flex">link link link link link</div>
-                    <div class="login">login</div>
+                <div class="navbar flex">
+                        <img src="./imgs/logo.svg" alt="Logo Discord" class="logo-discord">
+                    <div class="navbar-link flex">
+                        <a href="#" class="color-white">Scarica</a>
+                        <a href="#" class="color-white">Perchè Discord</a>
+                        <a href="#" class="color-white">Nitro</a>
+                        <a href="#" class="color-white">Sicurezza</a>
+                        <a href="#" class="color-white">Assistenza</a>
+                    </div>
+                    <a href="#" class="btn btn-accedi color-black">Accedi</a>
                 </div>
             </div>
         </section>
-        <section class="header2 bg-dark-blue flex">
-            <div class="violet-section bg-violet black-border"></div>
+        <section class="header2 flex">
+            <div class="header2-section">
+                <h1 class="header-h1 color-white">Il tuo posto per parlare</h1>
+                <p class="header-p color-white">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <a href="#" class="btn btn-scarica color-black">Scarica per Mac</a>
+                <a href="#" class="btn btn-apri color-white">Apri Discord nel tuo browser</a>
+            </div>
         </section>
     </header>
 
