feat: sistemo main

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="header1 bg-azzurro flex">
             <div class="container flex">
                 <div class="navbar flex">
-                        <img src="./imgs/logo.svg" alt="Logo Discord" class="logo-discord">
+                    <img src="./imgs/logo.svg" alt="Logo Discord" class="logo-discord">
                     <div class="navbar-link flex">
                         <a href="#" class="color-white">Scarica</a>
                         <a href="#" class="color-white">Perchè Discord</a>
@@ -22,16 +22,20 @@
                         <a href="#" class="color-white">Sicurezza</a>
                         <a href="#" class="color-white">Assistenza</a>
                     </div>
-                    <a href="#" class="btn btn-accedi color-black">Accedi</a>
+                    <a href="#" class="btn btn-accedi">Accedi</a>
                 </div>
             </div>
         </section>
         <section class="header2 flex">
             <div class="header2-section">
                 <h1 class="header-h1 color-white">Il tuo posto per parlare</h1>
-                <p class="header-p color-white">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                <a href="#" class="btn btn-scarica color-black">Scarica per Mac</a>
-                <a href="#" class="btn btn-apri color-white">Apri Discord nel tuo browser</a>
+                <p class="header-p color-white">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
+                    artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo
+                    assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <div class="btn-header2">
+                    <a href="#" class="btn btn-scarica">Scarica per Mac</a>
+                    <a href="#" class="btn btn-apri color-white">Apri Discord nel tuo browser</a>
+                </div>
             </div>
         </section>
     </header>
@@ -40,22 +44,41 @@
     <main>
         <section class="main-sezione1 flex">
             <div class="container flex">
-                <div class="blue-section bg-blue black-border"></div>
-                <div class="pink-section bg-pink black-border"></div>
+                <div>
+                    <img src="./imgs/item1.svg" class="main-img-section">
+                </div>
+                <div class="sezioni-main-contenuto">
+                    <h1>Un luogo a invito con tutto lo spazio necessasrio per parlare</h1>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare,
+                        condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
         </section>
 
         <section class="main-sezione2 flex bg-grey">
             <div class="container flex">
-                <div class="pink-section bg-pink black-border"></div>
-                <div class="blue-section bg-blue black-border"></div>
+                <div class="sezioni-main-contenuto">
+                    <h1>Dove trovarsi è facile</h1>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server
+                        possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+                <div>
+                    <img src="./imgs/item2.svg" class="main-img-section">
+                </div>
             </div>
         </section>
 
         <section class="main-sezione3 flex">
             <div class="container flex">
-                <div class="blue-section bg-blue black-border"></div>
-                <div class="pink-section bg-pink black-border"></div>
+                <div>
+                    <img src="./imgs/item3.svg" class="main-img-section">
+                </div>
+                <div class="sezioni-main-contenuto">
+                    <h1>Da pochi a un fandom</h1>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di
+                        moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali
+                        privati, e molto altro.</p>
+                </div>
             </div>
         </section>
 
