feat: aggiungo footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Discord</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -28,12 +29,12 @@
         </section>
         <section class="header2 flex">
             <div class="header2-section">
-                <h1 class="header-h1 color-white">Il tuo posto per parlare</h1>
+                <h1 class="color-white">Il tuo posto per parlare</h1>
                 <p class="header-p color-white">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
                     artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo
                     assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                 <div class="btn-header2">
-                    <a href="#" class="btn btn-scarica">Scarica per Mac</a>
+                    <a href="#" class="btn btn-scarica1">&#8595; Scarica per Mac</a>
                     <a href="#" class="btn btn-apri color-white">Apri Discord nel tuo browser</a>
                 </div>
             </div>
@@ -84,7 +85,13 @@
 
         <section class="main-sezione4 flex bg-grey">
             <div class="container flex">
-                <div class="green-section bg-green black-border"></div>
+                <div>
+                    <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="imgs/item4-big.svg">
+                    <h2 class="sfondo-stelle">Pronto a iniziare la tua avventura?</h3>
+                    <a class="btn btn-scarica2 color-white">&#8595; Scarica per Mac</a>
+                </div>
             </div>
         </section>
     </main>
@@ -93,23 +100,65 @@
     <footer class="bg-black">
         <div class="container">
             <section class="footer-sezione1 flex">
-                <div class="salmon-section bg-salmon black-border"></div>
-                <div class="verde-bottiglia-section bg-verde-bottiglia flex black-border">
-                    <div class="lista flex">
-                        <ul class="ul1"></ul>
-                        <ul class="ul2"></ul>
-                        <ul class="ul3"></ul>
-                        <ul class="ul4"></ul>
+                <div class="footer-sezione1-content">
+                    <h2 class="color-violet">Il tuo posto per parlare</h3>
+                    <p class="color-white"><img src="../imgs/ita.png" class="ita-img"> Italiano &#9662;</p>
+                    <div class="icons color-white">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
                     </div>
+                </div>
+                <div class="footer-sezione1-lista flex">
+                    <a class="lista flex">
+                        <ul class="ul1">
+                            <li class="title-list">Prodotto</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                        <ul class="ul2">
+                            <li class="title-list">Compagnia</li>
+                            <li>Chi siamo</li>
+                            <li>Lavora con noi</li>
+                            <li>Marchio</li>
+                            <li>Redazione</li>
+                            <li>Negozio</li>
+                        </ul>
+                        <ul class="ul3">
+                            <li class="title-list">Risorse</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                        <ul class="ul4">
+                            <li class="title-list">Norme</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </a>
                 </div>
             </section>
         </div>
 
         <section class="footer-sezione2 flex">
             <div class="container">
-                <div class="aquamarine-section bg-aquamarine flex">
-                    <button class="black-border">Logo</button>
-                    <button class="black-border">Bottone</button>
+                <div class="footer-navbar flex">
+                    <img src="./imgs/logo.svg" alt="Logo Discord" class="logo-discord">
+                    <a class="btn btn-registrati color-white">Registrati</a>
                 </div>
             </div>
         </section>
