--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@
             <div class="container flex">
                 <div>
                     <h1>Tecnologia affidabile per tenersi in contatto</h1>
-                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai
+                        ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con
+                        la condivisione schermo.</p>
                     <img src="imgs/item4-big.svg">
                     <h2 class="sfondo-stelle">Pronto a iniziare la tua avventura?</h3>
-                    <a class="btn btn-scarica2 color-white">&#8595; Scarica per Mac</a>
+                        <a class="btn btn-scarica2 color-white">&#8595; Scarica per Mac</a>
                 </div>
             </div>
         </section>
@@ -102,13 +104,13 @@
             <section class="footer-sezione1 flex">
                 <div class="footer-sezione1-content">
                     <h2 class="color-violet">Il tuo posto per parlare</h3>
-                    <p class="color-white"><img src="../imgs/ita.png" class="ita-img"> Italiano &#9662;</p>
-                    <div class="icons color-white">
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-square-facebook"></i>
-                        <i class="fa-brands fa-youtube"></i>
-                    </div>
+                        <p class="color-white"><img src="../imgs/ita.png" class="ita-img"> Italiano &#9662;</p>
+                        <div class="icons color-white">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                        </div>
                 </div>
                 <div class="footer-sezione1-lista flex">
                     <a class="lista flex">
