--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             </div>
         </section>
 
+        <div class="wave"></div>
+
         <section class="main-sezione2 flex bg-grey">
             <div class="container flex">
                 <div class="sezioni-main-contenuto">
@@ -68,6 +70,8 @@
                 </div>
             </div>
         </section>
+
+        <div class="central-wave"></div>
 
         <section class="main-sezione3 flex">
             <div class="container flex">
@@ -82,6 +86,8 @@
                 </div>
             </div>
         </section>
+
+        <div class="wave"></div>
 
         <section class="main-sezione4 flex bg-grey">
             <div class="container flex">
