--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img src="./imgs/item1.svg" class="main-img-section">
                 </div>
                 <div class="sezioni-main-contenuto">
-                    <h1>Un luogo a invito con tutto lo spazio necessasrio per parlare</h1>
+                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
                     <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare,
                         condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                 </div>
